Fixing the graph

--- a/experience.html
+++ b/experience.html
@@ -367,8 +367,32 @@ class="section level2">
 <p>I am currently a MPH student at Columbia University Mailman School of
 Public Health. I will be graduating in May 2024 with a Master of Public
 Health in Epidemiology and a focus on Applied Biostastistics and Public
-Health Data Science.</p>
-<p>Some of my professional experience are that</p>
+Health Data Science. I studied my undergraduate at San Jose State
+University with a Bachelor Degree of Public Health and minoring in
+Forensic Science.</p>
+<p>Some of my professional experiences are that I am currently interning
+at CDC Injury Control Research Centers and working on a study about the
+trend of Pregabalin and Opioid from 2015 to 2022. In addition, I am also
+a co-founder for the SJSU Shield Campaign. During my time in the
+campaign, I was responsible for content development and execution. Also,
+I was a research assistant during my undergraduate. In my role as
+research assistant, I co-designed and managed 6 protocols and case
+report from development to study report showcases. Furthermore, I worked
+as a community leadership intern during my undergraduate, where I
+collaborated with various community stakeholders and initiatives
+evaluation protocols on current smoking control policy. Throughout my
+experiences with various of community and company, I published several
+papers and one of them are in both English and Chinese.</p>
+<p>PUBLICTIONS:</p>
+<ol style="list-style-type: decimal">
+<li><p>Co-Author, “Health communication needs for COVID-19 prevention
+and control among college students”. 2022. Journal of American College
+Health.</p></li>
+<li><p>Co-Author, “How college students are coping with COVID-19: a
+qualitative study”. 2021. Journal of American College Health.</p></li>
+<li><p>Co-Author, “Better For It – Unity is Strength”. 2021. American
+Lung Association. (English &amp; Mandarin)</p></li>
+</ol>
 </div>
 
 
