adding my resume for question 1

--- a/experience.html
+++ b/experience.html
@@ -364,6 +364,8 @@ div.tocify {
 <div id="my-academic-and-professional-experience"
 class="section level2">
 <h2>My academic and professional experience</h2>
+<p>This is my resume!</p>
+<p><img src="image/resume.jpg"></p>
 <p>I am currently a MPH student at Columbia University Mailman School of
 Public Health. I will be graduating in May 2024 with a Master of Public
 Health in Epidemiology and a focus on Applied Biostastistics and Public
