Saving the changes

--- a/index.html
+++ b/index.html
@@ -330,7 +330,7 @@ div.tocify {
   <a href="experience.html">Experience</a>
 </li>
 <li>
-  <a href="plotly.html">Plotly</a>
+  <a href="Plotly.html">Plotly</a>
 </li>
 <li>
   <a href="dashboard.html">Dashboard</a>
@@ -378,7 +378,7 @@ href="experience.html">experience</a></p>
 </div>
 <div id="other-stuff-on-this-page" class="section level1">
 <h1>Other stuff on this page</h1>
-<p>Some plots that I created <a href="plotly.html">plotly</a></p>
+<p>Some plots that I created <a href="Plotly.html">Plotly</a></p>
 </div>
 
 
