Trying to make changes so plotly will show

--- a/index.html
+++ b/index.html
@@ -376,8 +376,8 @@ div.tocify {
 <p>My academic and professional experience <a
 href="experience.html">experience</a></p>
 </div>
-<div id="other-stuff-on-this-page" class="section level1">
-<h1>Other stuff on this page</h1>
+<div id="other-information-on-this-page" class="section level1">
+<h1>Other information on this page</h1>
 <p>Some plots that I created <a href="Plotly.html">Plotly</a></p>
 </div>
 
